--- a/Spaceway/Base.lproj/Main.storyboard
+++ b/Spaceway/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <segue destination="bJc-XS-mXh" kind="show" id="rR1-XM-4SC"/>
+                                    <segue destination="bJc-XS-mXh" kind="showDetail" action="showViewController:sender:" id="rR1-XM-4SC"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -76,7 +76,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cdG-Hk-i8G">
-                                <rect key="frame" x="16" y="20" width="343" height="647"/>
+                                <rect key="frame" x="-4" y="0.0" width="383" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fjF-nD-8kq">
                                         <rect key="frame" x="-1067" y="-1067" width="2800" height="2800"/>
@@ -88,12 +88,23 @@
                                                     <constraint firstAttribute="height" constant="2800" id="puB-dB-IPe"/>
                                                 </constraints>
                                             </imageView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fGv-NF-1HW">
+                                                <rect key="frame" x="1326" y="1325" width="60" height="60"/>
+                                                <color key="backgroundColor" red="0.1333333333" green="0.46666666670000001" blue="0.75294117650000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="60" id="RLm-ls-OeS"/>
+                                                    <constraint firstAttribute="height" constant="60" id="TgG-WG-85k"/>
+                                                </constraints>
+                                                <state key="normal" title="Button"/>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="2800" id="88k-tP-3cv"/>
+                                            <constraint firstItem="fGv-NF-1HW" firstAttribute="top" secondItem="fjF-nD-8kq" secondAttribute="top" constant="1325" id="Lp5-XT-82A"/>
                                             <constraint firstItem="LbW-hO-P0I" firstAttribute="leading" secondItem="fjF-nD-8kq" secondAttribute="leading" id="duh-hc-1Ye"/>
                                             <constraint firstItem="LbW-hO-P0I" firstAttribute="top" secondItem="fjF-nD-8kq" secondAttribute="top" id="mRy-pA-WJo"/>
+                                            <constraint firstItem="fGv-NF-1HW" firstAttribute="leading" secondItem="fjF-nD-8kq" secondAttribute="leading" constant="1326" id="oQe-ft-3Nb"/>
                                             <constraint firstAttribute="width" constant="2800" id="tTY-OW-Prb"/>
                                         </constraints>
                                     </view>
@@ -108,17 +119,17 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="cdG-Hk-i8G" secondAttribute="trailing" id="exD-aj-p9k"/>
-                            <constraint firstItem="cdG-Hk-i8G" firstAttribute="leading" secondItem="mt2-nk-AF5" secondAttribute="leadingMargin" id="n5e-ZI-d3M"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="cdG-Hk-i8G" secondAttribute="trailing" constant="-20" id="exD-aj-p9k"/>
+                            <constraint firstItem="cdG-Hk-i8G" firstAttribute="leading" secondItem="mt2-nk-AF5" secondAttribute="leadingMargin" constant="-20" id="n5e-ZI-d3M"/>
                             <constraint firstAttribute="bottomMargin" secondItem="cdG-Hk-i8G" secondAttribute="bottom" id="wVi-MC-kYT"/>
-                            <constraint firstItem="cdG-Hk-i8G" firstAttribute="top" secondItem="mt2-nk-AF5" secondAttribute="topMargin" id="y6E-AP-GHs"/>
+                            <constraint firstItem="cdG-Hk-i8G" firstAttribute="top" secondItem="mt2-nk-AF5" secondAttribute="topMargin" constant="-20" id="y6E-AP-GHs"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="TVT-oe-UNz"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g9X-Fk-u6X" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3362" y="134"/>
+            <point key="canvasLocation" x="3360.8000000000002" y="133.5832083958021"/>
         </scene>
     </scenes>
     <resources>
