--- a/Spaceway/Page.storyboard
+++ b/Spaceway/Page.storyboard
@@ -42,10 +42,23 @@
                                 </constraints>
                                 <state key="normal" title="Business"/>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LgS-IS-E1W">
+                                <rect key="frame" x="325" y="20" width="30" height="30"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="BEN-uL-TKa"/>
+                                    <constraint firstAttribute="width" constant="30" id="N6N-ca-dHT"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="closePage:" destination="Jac-q8-w6E" eventType="touchUpInside" id="XEv-2B-7Ba"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="vzn-5F-pcu" firstAttribute="trailing" secondItem="LgS-IS-E1W" secondAttribute="trailing" constant="20" id="AUS-Wd-7zs"/>
                             <constraint firstItem="uSq-Hm-7bA" firstAttribute="trailing" secondItem="vzn-5F-pcu" secondAttribute="trailing" id="EEX-2q-oDk"/>
+                            <constraint firstItem="LgS-IS-E1W" firstAttribute="top" secondItem="vzn-5F-pcu" secondAttribute="top" id="H0v-tA-BgS"/>
                             <constraint firstItem="EfA-9U-KFX" firstAttribute="trailing" secondItem="vzn-5F-pcu" secondAttribute="trailing" id="Mc0-1C-Kze"/>
                             <constraint firstItem="EfA-9U-KFX" firstAttribute="top" secondItem="wTs-uW-LFy" secondAttribute="top" id="RAe-Bo-RBK"/>
                             <constraint firstItem="EfA-9U-KFX" firstAttribute="leading" secondItem="vzn-5F-pcu" secondAttribute="leading" id="elZ-yD-Eoy"/>
